--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,8 +7,19 @@
         @apply text-2xl
     }
 
+    .btn-Data{
+        @apply text-xl font-semibold text-[#297933] hover:scale-105 transition-all w-full text-start
+        hover:text-[#1d4e29] opacity-85 hover:opacity-100 border-b-2 drop-shadow-sm uppercase h-[8%]
+        2xl:text-2xl 2xl:drop-shadow-md 
+    }
+
     h3{
-        @apply text-xl text-cyan-400
+        @apply text-xl uppercase font-bold drop-shadow-2xl border-b-2 border-black/10 w-full h-[7.5%] mb-[2.5%]
+        2xl:h-[5%] 2xl:mb-[5%] 2xl:text-2xl
+    }
+
+    h4{
+        @apply text-[7em] tracking-[.25em] font-bold drop-shadow-xl
     }
 
     .ImageHover:hover{
@@ -27,5 +38,9 @@
 
     .data2{
         @apply bg-green-400 w-full h-full absolute rounded-md opacity-50
+    }
+
+    .clip-TV{
+        clip-path: polygon(30% 0, 70% 0, 100% 100%, 0% 100%);
     }
 }
